# contextractor

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/dev/: python-pro.md
.claude/commands/docs/: update-docs-version.md
.claude/commands/local-tests/: prompt.md
.claude/commands/meta/: delete-prompt.md  fix-prompt.md  store-prompt.md  write-prompt.md
.claude/commands/platform/: push-and-get-working.md
.claude/commands/platform-tests/: generate-unit-tests.md  run-and-fix.md  sync-and-test.md
.claude/commands/publish/: all.md
.claude/commands/sync/: docs.md  gui.md
.claude/rules/: config-case-conventions.md
.github/workflows/: build-binaries.yml  release.yml
apps/contextractor-apify/: Dockerfile  README.md  pyproject.toml
apps/contextractor-apify/.actor/: actor.json  input_schema.json
apps/contextractor-apify/src/: config.py  handler.py  main.py
apps/contextractor-standalone/: Dockerfile  README.md  build.py  entry.py  example-config.json  example-config.yaml  pyproject.toml
apps/contextractor-standalone/npm/: README.md  cli.js  index.js  package.json  postinstall.js
apps/contextractor-standalone/src/contextractor_cli/: __init__.py  __main__.py  config.py  crawler.py  main.py
apps/contextractor-standalone/tests/: test_cli.py  test_config.py
docs/: pypi-trusted-publishing.md
docs/spec/: functional-spec.md  tech-spec.md
prompts/: add to allt he docs.md  config.md  free-proxies-for-web-scraping-testing.md  proxies.txt  publish.md
prompts/2026-03-23-cli-settings/cli-settings-notes/: cli-only-vs-config-analysis.md  current-settings-inventory.md
prompts/2026-03-23-cli-settings/implementation/: step-add-cli-flags.md  step-tests.md  step-update-npm-wrapper.md
prompts/2026-03-23-cli-settings/user-entry-log/: entry-instructions.md
prompts/2026-03-23-docker-distribution/docker-notes/: architecture.md
prompts/2026-03-23-docker-distribution/implementation/: step-review.md
prompts/2026-03-23-docker-distribution/user-entry-log/: entry-initial-prompt.md
prompts/2026-03-23-docs-update/docs-update-notes/: research-findings.md
prompts/2026-03-23-docs-update/implementation/: step-update-docs.md
prompts/2026-03-23-docs-update/user-entry-log/: entry-initial-prompt.md
prompts/2026-03-23-npm-publish/: prompt.md
prompts/2026-04-05-docker-fix-publish/notes/: ghcr-403-fix.md
prompts/2026-04-07-playground-positioning/: prompt.md
prompts/2026-04-07-popup-blocking/: prompt.md
prompts/2026-04-11-pypi-publish/: prompt.md
prompts/2026-04-11-relicense-apache/: prompt.md
(+146 files in other folders)
