[project]
name = "contextractor"
version = "0.3.5"
description = "Extract clean, readable content from any website"
license = "Apache-2.0"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Miroslav Sekera", email = "miroslav@glueo.com" }]

[project.urls]
Homepage = "https://contextractor.com"
Repository = "https://github.com/contextractor/contextractor"
Issues = "https://github.com/contextractor/contextractor/issues"
dependencies = [
    "crawlee[playwright]>=0.4.0",
    "contextractor-engine",
    "typer>=0.15.0",
    "pyyaml>=6.0",
    "browserforge<1.2.4",
]

[project.scripts]
contextractor = "contextractor_cli.main:app"

[tool.uv.sources]
contextractor-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextractor_cli"]
